Use images for the towers and rotate tower muzzles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="jquery.min.js"></script>
 <script src="towerDefense.js"> </script>
 
 <script src="InvaderCreator.js"> </script>
@@ -25,7 +25,7 @@
 <body>
 
 <h1> Tower Defense by PherricOxide </h1>
-<canvas id="c" width=400px height=400px style="display: inline-block;"></canvas>
+<canvas id="c" width=640px height=640px style="display: inline-block;"></canvas>
 <div style="display: inline-block; vertical-align: top;">
 
 <table>
@@ -96,6 +96,13 @@
 </table>
 
 <button onclick="Reset()">Apply</button>
+
+
+<br>
+<br>
+<img src="cannon.png" id="imageCannon"> </img>
+<img src="cannonMuzzle.png" id="imageCannonMuzzle"> </img>
+<img src="gatlingCannonMuzzle.png" id="imageGatlingCannonMuzzle"> </img>
 
 </body>
 
