--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 	<p class='towerSelect' id="gatlingcannon" onclick="SelectTower('gatlingcannon')"> 
 		Gatling Cannon <br>
 		&nbsp;&nbsp; Cost: 200
-		&nbsp;&nbsp; Dmg : 0.25
-		&nbsp;&nbsp; Cooldown: 400ms
+		&nbsp;&nbsp; Dmg : 2.0
+		&nbsp;&nbsp; Cooldown: 2,000ms
 	</p>
 	<p class='towerSelect' id="machinegun" onclick="SelectTower('machinegun')"> 
 		Machine Gun <br>
@@ -74,6 +74,7 @@
 
 
 
+<div style="display: none">
 <br><br>
 <table>
 	<tr>
@@ -101,8 +102,13 @@
 <br>
 <br>
 <img src="cannon.png" id="imageCannon"> </img>
+
 <img src="cannonMuzzle.png" id="imageCannonMuzzle"> </img>
 <img src="gatlingCannonMuzzle.png" id="imageGatlingCannonMuzzle"> </img>
+<img src="machineGunMuzzle.png" id="imageMachineGunMuzzle"> </img>
+
+<img src="desert-sand-texture.jpg" id="desertTexture"> </img>
+</div>
 
 </body>
 
