Misc art improvements

--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
 <img src="machineGunMuzzle.png" id="imageMachineGunMuzzle"> </img>
 
 <img src="desert-sand-texture.jpg" id="desertTexture"> </img>
+
+<img src="enemy1.png" id="enemy1"> </img>
+<img src="enemy2.png" id="enemy2"> </img>
+<img src="enemy3.png" id="enemy3"> </img>
+<img src="enemy4.png" id="enemy4"> </img>
 </div>
 
 </body>
