Make an enemy that blows up towers

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 <img src="enemy2.png" id="enemy2"> </img>
 <img src="enemy3.png" id="enemy3"> </img>
 <img src="enemy4.png" id="enemy4"> </img>
+<img src="enemy5.png" id="enemy5"> </img>
 </div>
 
 </body>
