Move things to images and scripts folders

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
 <head>
-<script src="jquery.min.js"></script>
-<script src="towerDefense.js"> </script>
+<script src="scripts/jquery.min.js"></script>
+<script src="scripts/towerDefense.js"> </script>
 
-<script src="InvaderCreator.js"> </script>
-<script src="Particle.js"> </script>
-<script src="Invader.js"> </script>
-<script src="Bullet.js"> </script>
-<script src="Tower.js"> </script>
-<script src="Base.js"> </script>
-<script src="Util.js"> </script>
-<script src="Map.js"> </script>
+<script src="scripts/InvaderCreator.js"> </script>
+<script src="scripts/Particle.js"> </script>
+<script src="scripts/Invader.js"> </script>
+<script src="scripts/Bullet.js"> </script>
+<script src="scripts/Tower.js"> </script>
+<script src="scripts/Base.js"> </script>
+<script src="scripts/Util.js"> </script>
+<script src="scripts/Map.js"> </script>
 
 <style>
 .towerSelect {
@@ -101,19 +101,19 @@
 
 <br>
 <br>
-<img src="cannon.png" id="imageCannon"> </img>
+<img src="images/cannon.png" id="imageCannon"> </img>
 
-<img src="cannonMuzzle.png" id="imageCannonMuzzle"> </img>
-<img src="gatlingCannonMuzzle.png" id="imageGatlingCannonMuzzle"> </img>
-<img src="machineGunMuzzle.png" id="imageMachineGunMuzzle"> </img>
+<img src="images/cannonMuzzle.png" id="imageCannonMuzzle"> </img>
+<img src="images/gatlingCannonMuzzle.png" id="imageGatlingCannonMuzzle"> </img>
+<img src="images/machineGunMuzzle.png" id="imageMachineGunMuzzle"> </img>
 
-<img src="desert-sand-texture.jpg" id="desertTexture"> </img>
+<img src="images/desert-sand-texture.jpg" id="desertTexture"> </img>
 
-<img src="enemy1.png" id="enemy1"> </img>
-<img src="enemy2.png" id="enemy2"> </img>
-<img src="enemy3.png" id="enemy3"> </img>
-<img src="enemy4.png" id="enemy4"> </img>
-<img src="enemy5.png" id="enemy5"> </img>
+<img src="images/enemy1.png" id="enemy1"> </img>
+<img src="images/enemy2.png" id="enemy2"> </img>
+<img src="images/enemy3.png" id="enemy3"> </img>
+<img src="images/enemy4.png" id="enemy4"> </img>
+<img src="images/enemy5.png" id="enemy5"> </img>
 </div>
 
 </body>
