Add health bars to the enemies

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>HTML5 Tower Defense by PherricOxide </title>
 <script src="scripts/jquery.min.js"></script>
 <script src="scripts/towerDefense.js"> </script>
 
